--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a *ngIf="isLogged()" (click)="auth.login()">Login</a></li>
       <li><a *ngIf="!isLogged()" (click)="auth.logout()">Logout</a></li>
+      <li><a *ngIf="!isLogged()" (click)="getMe()">Get Me</a></li>
     </ul>
   </div>
 </nav>
