Add 404 page + create, update, watch instructions + upload cloudinary images

--- a/src/app/components/common/navigation/navigation.component.css
+++ b/src/app/components/common/navigation/navigation.component.css
@@ -11,6 +11,14 @@
   color: black;
 }
 
+a#name {
+  color: #000000;
+}
+
+cl-image {
+  display: flex;
+}
+
 .instructions-logo {
   color: #00aeef !important;
   font-family: 'Roboto', sans-serif !important;
