--- a/src/app/components/instruction/update/instruction.update.component.html
+++ b/src/app/components/instruction/update/instruction.update.component.html
@@ -14,54 +14,56 @@
           <div class="chips chips-initial chips-autocomplete"></div>
         </div>
       </div>
-      <ul id="steps" class="collapsible popout" data-collapsible="accordion">
-        <li *ngFor="let step of this.instruction.steps; let i = index" id="{{i}}">
-          <div class="collapsible-header">
-            <div class="input-field" style="width: 100%;">
-              <div class="row">
-                <input placeholder='{{"STEP_NAME" | translate}}' id="step_name" type="text" class="validate col s12 m10"
-                       name="step_name" [(ngModel)]="step.name" (change)="updateInstruction()">
-                <a id="delete_step" class="waves-effect waves-light btn col s12 m2" (click)="deleteStep(step)">{{"DELETE"
-                  | translate}}</a>
-              </div>
-            </div>
-          </div>
-          <div class="collapsible-body">
-            <ul class="collection" dnd-sortable-container [sortableData]="step.parts">
-              <li class="collection-item" *ngFor="let part of step.parts; let i = index"
-                  dnd-sortable
-                  [sortableIndex]="i">
-                <div class="row">
-                  <textarea *ngIf="part.type == 'TYPE_TEXT'" placeholder='{{"TEXT" | translate}}' type="text"
-                            class="materialize-textarea validate col s12 m11" name="part.data"
-                            [(ngModel)]="part.data" (change)="updateInstruction()"></textarea>
 
-                  <image-upload *ngIf="part.type == 'TYPE_IMAGE'" [part]="part" (onChange)="updateInstruction()"
-                                class="center col s12 m11"></image-upload>
-
-                  <input *ngIf="part.type == 'TYPE_VIDEO'" placeholder='{{"VIDEO_LINK" | translate}}' type="text"
-                         [(ngModel)]="part.data" class="col s12 m11" (change)="updateInstruction()">
-
-                  <a class="waves-effect waves-light btn" (click)="deletePart(step, part)"><i
-                    class="small material-icons">clear</i></a>
-                </div>
-              </li>
-              <div class="center">
-                <a class="waves-effect waves-light btn" (click)="createNewPart(step, 'TYPE_TEXT')">{{"CREATE_NEW_TEXT" |
-                  translate}}</a>
-                <a class="waves-effect waves-light btn green" (click)="createNewPart(step, 'TYPE_IMAGE')">{{"CREATE_NEW_IMAGE"
-                  | translate}}</a>
-                <a class="waves-effect waves-light btn red" (click)="createNewPart(step, 'TYPE_VIDEO')">{{"CREATE_NEW_VIDEO"
-                  | translate}}</a>
-              </div>
-            </ul>
-          </div>
-        </li>
-      </ul>
       <div class="center">
         <a class="waves-effect waves-light btn center-align" (click)="createNewStep()">{{"CREATE_NEW_STEP" |
           translate}}</a>
       </div>
+
+      <pagination-controls class="center" (pageChange)="p = $event"></pagination-controls>
+      <ul id="steps">
+        <li class="row center" style="width: 95%" *ngFor="let step of this.instruction.steps | paginate: { itemsPerPage: 1, currentPage: p }">
+          <div class="input-field" style="width: 100%;">
+            <div class="row">
+              <input placeholder='{{"STEP_NAME" | translate}}' id="step_name" type="text"
+                     class="validate col s12 m10"
+                     name="step_name" [(ngModel)]="step.name" (change)="updateInstruction()">
+              <a id="delete_step" class="waves-effect waves-light btn col s12 m2" (click)="deleteStep(step)">{{"DELETE"
+                | translate}}</a>
+            </div>
+          </div>
+          <ul class="collection" dnd-sortable-container [sortableData]="step.parts">
+            <li class="collection-item" *ngFor="let part of step.parts; let i = index"
+                dnd-sortable
+                [sortableIndex]="i">
+              <div class="row">
+                  <textarea *ngIf="part.type == 'TYPE_TEXT'" placeholder='{{"TEXT" | translate}}' type="text"
+                            class="materialize-textarea validate col s12 m11" name="part.data"
+                            [(ngModel)]="part.data" (change)="updateInstruction()"></textarea>
+
+                <image-upload *ngIf="part.type == 'TYPE_IMAGE'" [part]="part" (onChange)="updateInstruction()"
+                              class="center col s12 m11"></image-upload>
+
+                <input *ngIf="part.type == 'TYPE_VIDEO'" placeholder='{{"VIDEO_LINK" | translate}}' type="text"
+                       [(ngModel)]="part.data" class="col s12 m11" (change)="updateInstruction()">
+
+                <a class="waves-effect waves-light btn" (click)="deletePart(step, part)"><i
+                  class="small material-icons">clear</i></a>
+              </div>
+            </li>
+            <div class="center">
+              <a class="waves-effect waves-light btn" (click)="createNewPart(step, 'TYPE_TEXT')">{{"CREATE_NEW_TEXT" |
+                translate}}</a>
+              <a class="waves-effect waves-light btn green" (click)="createNewPart(step, 'TYPE_IMAGE')">{{"CREATE_NEW_IMAGE"
+                | translate}}</a>
+              <a class="waves-effect waves-light btn red" (click)="createNewPart(step, 'TYPE_VIDEO')">{{"CREATE_NEW_VIDEO"
+                | translate}}</a>
+            </div>
+          </ul>
+          <!--</div>-->
+        </li>
+      </ul>
+      <pagination-controls class="center" (pageChange)="p = $event"></pagination-controls>
     </div>
   </section>
 </div>
