--- a/src/app/components/instruction/watch/instruction.watch.component.html
+++ b/src/app/components/instruction/watch/instruction.watch.component.html
@@ -23,12 +23,44 @@
           <div class="collapsible-body">
             <ul class="collection">
               <li class="collection-item" *ngFor="let part of step.parts; let i = index">
+                <!--<div>-->
+                <!--<a class="waves-effect waves-light btn-floating btn-large yellow tooltipped"-->
+                <!--data-position="right" data-delay="50" data-tooltip="I am a tooltip">-->
+                <!--<i class="large material-icons">mode_edit</i>-->
+                <!--</a>-->
+                <!--</div>-->
                 <div class="row">
+
+                  <div *ngIf="part.type == 'TYPE_TEXT'" class="label">{{part.data}}</div>
+
+                  <div *ngIf="part.type == 'TYPE_IMAGE'">
+                    <div class="col s12 m2">
+                      <div class="delimeter"></div>
+                      <a class="waves-effect waves-light btn-floating btn-large orange"
+                         (click)="addFilter('', part)">
+                        <i class="large material-icons">filter</i>
+                      </a>
+                      <div class="delimeter"></div>
+                      <a class="waves-effect waves-light btn-floating btn-large grey"
+                         (click)="addFilter('e_grayscale', part)">
+                        <i class="large material-icons">filter_1</i>
+                      </a>
+                      <div class="delimeter"></div>
+                      <a class="waves-effect waves-light btn-floating btn-large green"
+                         (click)="addFilter('e_improve', part)">
+                        <i class="large material-icons">filter_2</i>
+                      </a>
+                      <div class="delimeter"></div>
+                      <a class="waves-effect waves-light btn-floating btn-large blue"
+                         (click)="addFilter('e_art:primavera', part)">
+                        <i class="large material-icons">filter_3</i>
+                      </a>
+                    </div>
+                    <div class="center col s12 m8">
+                      <img width="700" [src]="makeLinkToImg(part.data)">
+                    </div>
+                  </div>
                   <div class="center">
-                    <div *ngIf="part.type == 'TYPE_TEXT'" class="label">{{part.data}}</div>
-
-                    <img *ngIf="part.type == 'TYPE_IMAGE'" width="700" [src]="makeLinkToImg(part.data)">
-
                     <youtube-player *ngIf="part.type == 'TYPE_VIDEO'" [videoId]="part.data" [width]="640" [height]="480"
                     ></youtube-player>
                   </div>
