--- a/src/app/components/instruction/update/instruction.update.component.html
+++ b/src/app/components/instruction/update/instruction.update.component.html
@@ -1,5 +1,9 @@
 <div class="wrapper">
   <section id="container">
+    <div class="center-align">
+      <a class="waves-effect waves-light btn green" [routerLink]="['../../watch/', instruction.id]">{{"PREVIEW" |
+        translate}}</a>
+    </div>
     <div id="update-instruction-page" class="section">
       <div id="update-instruction-page-content" class="row">
         <div id="update-instruction-page-wall" class="col s12 m6">
@@ -22,7 +26,8 @@
 
       <pagination-controls class="center" (pageChange)="p = $event"></pagination-controls>
       <ul id="steps">
-        <li class="row center" style="width: 95%" *ngFor="let step of this.instruction.steps | paginate: { itemsPerPage: 1, currentPage: p }">
+        <li class="row center" style="width: 95%"
+            *ngFor="let step of this.instruction.steps | paginate: { itemsPerPage: 1, currentPage: p }">
           <div class="input-field" style="width: 100%;">
             <div class="row">
               <input placeholder='{{"STEP_NAME" | translate}}' id="step_name" type="text"
@@ -33,9 +38,8 @@
             </div>
           </div>
           <ul class="collection" dnd-sortable-container [sortableData]="step.parts">
-            <li class="collection-item" *ngFor="let part of step.parts; let i = index"
-                dnd-sortable
-                [sortableIndex]="i">
+            <li class="collection-item" *ngFor="let part of step.parts; let i = index" dnd-sortable [sortableIndex]="i"
+                (onDropSuccess)="updateInstruction()">
               <div class="row">
                   <textarea *ngIf="part.type == 'TYPE_TEXT'" placeholder='{{"TEXT" | translate}}' type="text"
                             class="materialize-textarea validate col s12 m11" name="part.data"
