Add medals to admin page + some fixes

--- a/src/app/components/user/admin/users/admin.users.css
+++ b/src/app/components/user/admin/users/admin.users.css
@@ -7,3 +7,36 @@ a.title {
   margin-top: 10px;
   position: absolute;
 }
+
+div.widthdelimeter {
+  width: 50px;
+}
+img {
+  cursor: pointer
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  top: 60px;
+  left: -65%;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
