--- a/src/app/components/instruction/update/instruction.update.component.html
+++ b/src/app/components/instruction/update/instruction.update.component.html
@@ -1,8 +1,14 @@
 <div class="wrapper">
   <section id="container">
-    <div class="center-align">
-      <a class="waves-effect waves-light btn green" [routerLink]="['../../watch/', instruction.id]">{{"PREVIEW" |
-        translate}}</a>
+    <div>
+      <div class="right">
+        <a class="waves-effect waves-light btn center-align red" (click)="deleteInstruction()">{{"DELETE_INSTRUCTION" |
+          translate}}</a>
+      </div>
+      <div class="center-align">
+        <a class="waves-effect waves-light btn green" [routerLink]="['../../watch/', instruction.id]">{{"PREVIEW" |
+          translate}}</a>
+      </div>
     </div>
     <div class="section">
       <div class="row">
