Add new functionality + some fixes

--- a/src/app/components/common/navigation/navigation.component.html
+++ b/src/app/components/common/navigation/navigation.component.html
@@ -67,6 +67,9 @@
     <!--Admin users-->
     <li class="hoverable" *ngIf="isAdmin"><a [routerLink]="['admin/users']">{{"USERS" | translate}}</a></li>
 
+    <!--Admin manage-->
+    <li class="hoverable" *ngIf="isAdmin"><a [routerLink]="['admin/manage']">{{"MANAGEMENT" | translate}}</a></li>
+
     <!--logout (should be the last!)-->
     <li class="hoverable" [hidden]="!isLoggedIn"><a (click)="logout()">{{"LOGOUT" | translate}}</a></li>
 
