--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -58,7 +58,7 @@
             |
             translate}}</a>
         </div>
-        <instruction-module [instructions]="this.instructions"></instruction-module>
+        <instruction-module [instructions]="this.instructions" [withSort]="true"></instruction-module>
       </div>
     </div>
   </section>
