--- a/src/app/components/common/rating/rating.component.html
+++ b/src/app/components/common/rating/rating.component.html
@@ -1,3 +1,3 @@
-<bar-rating [theme]="'stars'" [rate]="rate" [max]="10" (rateChange)="updateRating($event)"
+<bar-rating [theme]="'stars'" [rate]="rate" [max]="10" (rateChange)="updateRating($event)" [readOnly]="!isLoggedIn"
             (hover)="showRate()" (leave)="hideRate()"></bar-rating>
-<div id="rate" *ngIf="show" class="label center blue-text flow-text">{{"YOUR_RATE" | translate}} {{myRate}}</div>
+<div id="rate" *ngIf="show && isLoggedIn" class="label center blue-text flow-text">{{"YOUR_RATE" | translate}} {{myRate}}</div>
