--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <div class="video-container">
-    <iframe width="853" height="480" src="//www.youtube.com/embed/Q8TXgCzxEnw?rel=0" frameborder="0" allowfullscreen></iframe>
+  <div style="display: table;
+  margin: 0 auto;">
+    <tag-module></tag-module>
   </div>
 </div>
